# polyglot-perceptron

./: pyproject.toml  train.py
