[tool.poetry]
name = "polyglot-perceptron"
version = "0.1.0"
description = ""
authors = ["Maximilian Goisser <goisser94@gmail.com>"]
license = "MIT OR Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.6.0"
torchvision = "^0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
